rest content with 2fa